[package]
name = "logimu"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "*"
serde = { version = "*", features = ["derive"] }
erased-serde = "*"
typetag = "*"
ron = "*"
lazy_static = "*"

[dev-dependencies]
serde_test = "*"

[profile.release]
lto = "fat"

[profile.dev.package."*"]
opt-level = 3
