[package]
name = "logimu"
version = "0.1.1"
edition = "2021"

[dependencies]
eframe = "*"
serde = { version = "*", features = ["derive"] }
erased-serde = "*"
typetag = "*"
ron = "*"
lazy_static = "*"
gcd = "*"
thin-dst = "*"

[dev-dependencies]
serde_test = "*"

[profile.release]
lto = "fat"

[profile.dev.package."*"]
opt-level = 3
